FspowParser.py
# Generated from Fspow.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class FspowParser ( Parser ):

    grammarFileName = "Fspow.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'.apply('", "')'", "'Selector('", 
                     "','", "'name('", "'size('", "'FileCollection('", "'+'", 
                     "'-'", "'*'", "'/'", "'print '", "'['", "']'", "'for '", 
                     "' in range('", "'):'", "'.length()'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "STRING", "WS", "COMMENT", "INTEGER" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_assignment = 2
    RULE_fcApplySelector = 3
    RULE_expression = 4
    RULE_variable = 5
    RULE_newSelector = 6
    RULE_selectorType = 7
    RULE_newFileCollection = 8
    RULE_rootSpecifier = 9
    RULE_numeric = 10
    RULE_operator = 11
    RULE_prints = 12
    RULE_label = 13
    RULE_loop = 14
    RULE_length = 15

    ruleNames =  [ "prog", "stat", "assignment", "fcApplySelector", "expression", 
                   "variable", "newSelector", "selectorType", "newFileCollection", 
                   "rootSpecifier", "numeric", "operator", "prints", "label", 
                   "loop", "length" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    ID=20
    STRING=21
    WS=22
    COMMENT=23
    INTEGER=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FspowParser.StatContext)
            else:
                return self.getTypedRuleContext(FspowParser.StatContext,i)


        def getRuleIndex(self):
            return FspowParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = FspowParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.stat()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FspowParser.T__12) | (1 << FspowParser.T__15) | (1 << FspowParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FspowParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatApplySelectorContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FspowParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def fcApplySelector(self):
            return self.getTypedRuleContext(FspowParser.FcApplySelectorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatApplySelector" ):
                listener.enterStatApplySelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatApplySelector" ):
                listener.exitStatApplySelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatApplySelector" ):
                return visitor.visitStatApplySelector(self)
            else:
                return visitor.visitChildren(self)


    class PrintContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FspowParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prints(self):
            return self.getTypedRuleContext(FspowParser.PrintsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)


    class StatLoopContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FspowParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def loop(self):
            return self.getTypedRuleContext(FspowParser.LoopContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatLoop" ):
                listener.enterStatLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatLoop" ):
                listener.exitStatLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatLoop" ):
                return visitor.visitStatLoop(self)
            else:
                return visitor.visitChildren(self)


    class StatAssignmentContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FspowParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(FspowParser.AssignmentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatAssignment" ):
                listener.enterStatAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatAssignment" ):
                listener.exitStatAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatAssignment" ):
                return visitor.visitStatAssignment(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = FspowParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = FspowParser.StatAssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.assignment()
                pass

            elif la_ == 2:
                localctx = FspowParser.StatApplySelectorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.fcApplySelector()
                pass

            elif la_ == 3:
                localctx = FspowParser.PrintContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 39
                self.prints()
                pass

            elif la_ == 4:
                localctx = FspowParser.StatLoopContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 40
                self.loop()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FspowParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(FspowParser.ExpressionContext,0)


        def getRuleIndex(self):
            return FspowParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = FspowParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(FspowParser.ID)
            self.state = 44
            self.match(FspowParser.T__0)
            self.state = 45
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FcApplySelectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FspowParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(FspowParser.ExpressionContext,0)


        def getRuleIndex(self):
            return FspowParser.RULE_fcApplySelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFcApplySelector" ):
                listener.enterFcApplySelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFcApplySelector" ):
                listener.exitFcApplySelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFcApplySelector" ):
                return visitor.visitFcApplySelector(self)
            else:
                return visitor.visitChildren(self)




    def fcApplySelector(self):

        localctx = FspowParser.FcApplySelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fcApplySelector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(FspowParser.ID)
            self.state = 48
            self.match(FspowParser.T__1)
            self.state = 49
            self.expression()
            self.state = 50
            self.match(FspowParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FspowParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprNumericContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FspowParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def numeric(self):
            return self.getTypedRuleContext(FspowParser.NumericContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprNumeric" ):
                listener.enterExprNumeric(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprNumeric" ):
                listener.exitExprNumeric(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNumeric" ):
                return visitor.visitExprNumeric(self)
            else:
                return visitor.visitChildren(self)


    class ExprNewSelectorContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FspowParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def newSelector(self):
            return self.getTypedRuleContext(FspowParser.NewSelectorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprNewSelector" ):
                listener.enterExprNewSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprNewSelector" ):
                listener.exitExprNewSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNewSelector" ):
                return visitor.visitExprNewSelector(self)
            else:
                return visitor.visitChildren(self)


    class ExprIDContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FspowParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variable(self):
            return self.getTypedRuleContext(FspowParser.VariableContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprID" ):
                listener.enterExprID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprID" ):
                listener.exitExprID(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprID" ):
                return visitor.visitExprID(self)
            else:
                return visitor.visitChildren(self)


    class ExprlengthContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FspowParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def length(self):
            return self.getTypedRuleContext(FspowParser.LengthContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprlength" ):
                listener.enterExprlength(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprlength" ):
                listener.exitExprlength(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlength" ):
                return visitor.visitExprlength(self)
            else:
                return visitor.visitChildren(self)


    class ExprNewFileCollectionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FspowParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def newFileCollection(self):
            return self.getTypedRuleContext(FspowParser.NewFileCollectionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprNewFileCollection" ):
                listener.enterExprNewFileCollection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprNewFileCollection" ):
                listener.exitExprNewFileCollection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNewFileCollection" ):
                return visitor.visitExprNewFileCollection(self)
            else:
                return visitor.visitChildren(self)



    def expression(self):

        localctx = FspowParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression)
        try:
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = FspowParser.ExprIDContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.variable()
                pass

            elif la_ == 2:
                localctx = FspowParser.ExprNewSelectorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.newSelector()
                pass

            elif la_ == 3:
                localctx = FspowParser.ExprNewFileCollectionContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.newFileCollection()
                pass

            elif la_ == 4:
                localctx = FspowParser.ExprNumericContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.numeric()
                pass

            elif la_ == 5:
                localctx = FspowParser.ExprlengthContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.length()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FspowParser.ID, 0)

        def getRuleIndex(self):
            return FspowParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = FspowParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(FspowParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewSelectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectorType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FspowParser.SelectorTypeContext)
            else:
                return self.getTypedRuleContext(FspowParser.SelectorTypeContext,i)


        def getRuleIndex(self):
            return FspowParser.RULE_newSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewSelector" ):
                listener.enterNewSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewSelector" ):
                listener.exitNewSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewSelector" ):
                return visitor.visitNewSelector(self)
            else:
                return visitor.visitChildren(self)




    def newSelector(self):

        localctx = FspowParser.NewSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_newSelector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(FspowParser.T__3)
            self.state = 62
            self.selectorType()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FspowParser.T__4:
                self.state = 63
                self.match(FspowParser.T__4)
                self.state = 64
                self.selectorType()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(FspowParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectorTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(FspowParser.STRING, 0)

        def getRuleIndex(self):
            return FspowParser.RULE_selectorType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectorType" ):
                listener.enterSelectorType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectorType" ):
                listener.exitSelectorType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectorType" ):
                return visitor.visitSelectorType(self)
            else:
                return visitor.visitChildren(self)




    def selectorType(self):

        localctx = FspowParser.SelectorTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_selectorType)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FspowParser.T__5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(FspowParser.T__5)
                self.state = 73
                self.match(FspowParser.STRING)
                self.state = 74
                self.match(FspowParser.T__2)
                pass
            elif token in [FspowParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.match(FspowParser.T__6)
                self.state = 76
                self.match(FspowParser.STRING)
                self.state = 77
                self.match(FspowParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewFileCollectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rootSpecifier(self):
            return self.getTypedRuleContext(FspowParser.RootSpecifierContext,0)


        def getRuleIndex(self):
            return FspowParser.RULE_newFileCollection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewFileCollection" ):
                listener.enterNewFileCollection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewFileCollection" ):
                listener.exitNewFileCollection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewFileCollection" ):
                return visitor.visitNewFileCollection(self)
            else:
                return visitor.visitChildren(self)




    def newFileCollection(self):

        localctx = FspowParser.NewFileCollectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_newFileCollection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(FspowParser.T__7)
            self.state = 81
            self.rootSpecifier()
            self.state = 82
            self.match(FspowParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RootSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(FspowParser.STRING, 0)

        def getRuleIndex(self):
            return FspowParser.RULE_rootSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRootSpecifier" ):
                listener.enterRootSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRootSpecifier" ):
                listener.exitRootSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRootSpecifier" ):
                return visitor.visitRootSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def rootSpecifier(self):

        localctx = FspowParser.RootSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_rootSpecifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(FspowParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumericContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FspowParser.LabelContext)
            else:
                return self.getTypedRuleContext(FspowParser.LabelContext,i)


        def operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FspowParser.OperatorContext)
            else:
                return self.getTypedRuleContext(FspowParser.OperatorContext,i)


        def getRuleIndex(self):
            return FspowParser.RULE_numeric

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumeric" ):
                listener.enterNumeric(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumeric" ):
                listener.exitNumeric(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumeric" ):
                return visitor.visitNumeric(self)
            else:
                return visitor.visitChildren(self)




    def numeric(self):

        localctx = FspowParser.NumericContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_numeric)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.label()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FspowParser.T__8) | (1 << FspowParser.T__9) | (1 << FspowParser.T__10) | (1 << FspowParser.T__11))) != 0):
                self.state = 87
                self.operator()
                self.state = 88
                self.label()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FspowParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = FspowParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FspowParser.T__8) | (1 << FspowParser.T__9) | (1 << FspowParser.T__10) | (1 << FspowParser.T__11))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FspowParser.ID, 0)

        def label(self):
            return self.getTypedRuleContext(FspowParser.LabelContext,0)


        def STRING(self):
            return self.getToken(FspowParser.STRING, 0)

        def getRuleIndex(self):
            return FspowParser.RULE_prints

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrints" ):
                listener.enterPrints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrints" ):
                listener.exitPrints(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrints" ):
                return visitor.visitPrints(self)
            else:
                return visitor.visitChildren(self)




    def prints(self):

        localctx = FspowParser.PrintsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_prints)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(FspowParser.T__12)
                self.state = 98
                self.match(FspowParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(FspowParser.T__12)
                self.state = 100
                self.match(FspowParser.ID)
                self.state = 101
                self.match(FspowParser.T__13)
                self.state = 102
                self.label()
                self.state = 103
                self.match(FspowParser.T__14)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.match(FspowParser.T__12)
                self.state = 106
                self.match(FspowParser.STRING)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(FspowParser.INTEGER, 0)

        def ID(self):
            return self.getToken(FspowParser.ID, 0)

        def getRuleIndex(self):
            return FspowParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = FspowParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_label)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not(_la==FspowParser.ID or _la==FspowParser.INTEGER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'
